# requirement-evaluator

./: .gitignore  README.md
.agents/skills/frontend-design-project/: SKILL.md
.agents/skills/requirements-evaluator/: SKILL.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/adapters/: packet_builder.py
backend/app/api/routes/: evaluations.py
backend/app/clients/: model_client.py
backend/app/core/: config.py  paths.py  versioning.py
backend/app/models/: evaluation.py
backend/app/runners/: evaluation_runner.py
backend/app/services/: evaluation_service.py
backend/app/storage/: __init__.py  evaluation_store.py
backend/tests/: conftest.py  test_evaluation_service.py  test_evaluation_store.py  test_evaluations_api.py  test_main.py  test_versioning.py
docs/: requirements-evaluator-dev-notes.md
docs/superpowers/plans/: 2026-04-04-requirements-evaluator-service.md  2026-04-05-frontend-refresh-implementation.md  2026-04-05-model-configuration-implementation.md
docs/superpowers/specs/: 2026-04-04-requirements-evaluator-service-design.md  2026-04-05-detail-page-state-interaction-design.md  2026-04-05-frontend-pages-design.md  2026-04-05-model-configuration-design.md  2026-04-05-upload-page-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  viteProxy.test.ts
frontend/src/components/: EvaluationStatusPanel.tsx  FileUploadForm.tsx  ReportViewer.tsx
tools/: summarize_evaluation_reports.py
tools/tests/: test_summarize_evaluation_reports.py
(+27 files in other folders)
